--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         body {
             text-align: center;
             background-color:blanchedalmond;
+            text-align: center;
         }
 
         div > h1 {
@@ -50,6 +51,12 @@
         div a{
             text-decoration: none;
             color: aliceblue;
+        }
+        div{
+            text-align: center;
+        }
+        p{
+            text-align: center;
         }
     </style>
 </head>
